--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,13 +25,13 @@
         <hr>
         <header>
             <a href="/wdd230/chamber/index.html">
-                <img class="logo" src="/chamber/images/hero.webp" alt="logo">
+                <img class="logo" src="../chamber/images/hero.webp" alt="logo">
             </a>
         </header>
         <nav id="mainnav">
             <ul>
                 <li class="hamburger" id="menubutton">
-                    <img src="/chamber/images/hamburger.png" alt="hamburger menu">
+                    <img src="../chamber/images/hamburger.png" alt="hamburger menu">
                 </li>
 
                 <li class="menuItem"><a href="/wdd230/chamber/index.html">Home</a></li>
@@ -61,7 +61,7 @@
                 <h2>Events</h2>
                 <div class="card">
                     <picture>
-                        <img src="/chamber/images/ypn.jpg" alt="">
+                        <img src="../chamber/images/ypn.jpg" alt="">
                     </picture>
                     <div class="cardContent">
                         <h2>December 7th, 2023</h2>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="card">
                     <picture>
-                        <img src="/chamber/images/coffee.jpg" alt="">
+                        <img src="../chamber/images/coffee.jpg" alt="">
                     </picture>
                     <div class="cardContent">
                         <h2>December 19th, 2023</h2>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="card">
                     <picture>
-                        <img src="/chamber/images/powerhour.jpg" alt="">
+                        <img src="../chamber/images/powerhour.jpg" alt="">
                     </picture>
                     <div class="cardContent">
                         <h2>December 21st, 2023</h2>
