--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&amp;display=swap" rel="stylesheet">
+    <link rel="icon" href="../chamber/images/favicon.ico">
     <meta property="og:title" content="Chamber of Commerce">
     <meta property="og:description" content="Seth's WDD 230 chamber of commerce project for BYUI">
     <meta property="og:image" content="">
