--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,7 +26,7 @@
         <hr>
         <header>
             <a href="/wdd230/chamber/index.html">
-                <img class="logo" src="../chamber/images/hero.webp" alt="logo">
+                <img class="logo" srcset="../chamber/images/hero.webp" alt="logo">
             </a>
         </header>
         <nav id="mainnav">
