--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="/chamber/images/favicon.ico">
     <meta property="og:title" content="Chamber of Commerce">
     <meta property="og:description" content="Seth's WDD 230 chamber of commerce project for BYUI">
-    <meta property="og:image" content="../chamber/images/hero.webp">
+    <meta property="og:image" content="/chamber/images/hero.webp">
     <meta property="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
     <meta property="og:type" content="website">
 </head>
