--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,7 +25,7 @@
     <div class="viewport">
         <hr>
         <header>
-            <a href="/wdd230/chamber/index.html">
+            <a href="../wdd230/chamber/index.html">
                 <img class="logo" srcset="../chamber/images/hero.webp" alt="logo">
             </a>
         </header>
