--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,7 +35,7 @@
                     <img src="../chamber/images/hamburger.png" alt="hamburger menu">
                 </li>
 
-                <li class="menuItem"><a href="/wdd230/chamber/index.html">Home</a></li>
+                <li class="menuItem"><a href="/chamber/index.html">Home</a></li>
 
 
             </ul>
