--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,13 +35,14 @@
                     <img src="../chamber/images/hamburger.png" alt="hamburger menu">
                 </li>
 
-                <li class="menuItem"><a href="/chamber/index.html">Home</a></li>
+                <li class="menuItem"><a href="../chamber/index.html">Home</a></li>
 
 
             </ul>
         </nav>
         <main>
             <div class="banner">
+              <img src="../chamber/images/wdd230-org.webp">
                 <a href="" class=""></a>
             </div>
             <div class="textContent">
