--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,7 +46,7 @@
                 <a href="" class=""></a>
             </div>
             <div class="textContent">
-                <h1>Chamber of Commerce</h1>
+                <h1>Hudson Chamber of Commerce</h1>
                 <p>We're devoted to supporting and promoting the original business community.
                    Our thing is to help businesses network, grow, and thrive.
                 <br><br>
