--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&amp;display=swap" rel="stylesheet">
-    <link rel="icon" href="/chamber/images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <meta property="og:title" content="Chamber of Commerce">
     <meta property="og:description" content="Seth's WDD 230 chamber of commerce project for BYUI">
     <meta property="og:image" content="https://sethro552.github.io/wdd230/chamber/index.html">
@@ -25,24 +25,24 @@
     <div class="viewport">
         <hr>
         <header>
-            <a href="../chamber/index.html">
-                <img class="logo" srcset="../chamber/images/hero.webp" alt="logo">
+            <a href="index.html">
+                <img class="logo" srcset="images/hero.webp" alt="logo">
             </a>
         </header>
         <nav id="mainnav">
             <ul>
                 <li class="hamburger" id="menubutton">
-                    <img src="../chamber/images/hamburger.png" alt="hamburger menu">
+                    <img src="images/hamburger.png" alt="hamburger menu">
                 </li>
 
-                <li class="menuItem"><a href="../chamber/index.html">Home</a></li>
+                <li class="menuItem"><a href="index.html">Home</a></li>
 
 
             </ul>
         </nav>
         <main>
             <div class="banner">
-              <img src="../chamber/images/wdd230-org.webp">
+              <img src="images/wdd230-org.webp">
                 <a href="" class=""></a>
             </div>
             <div class="textContent">
@@ -63,7 +63,7 @@
                 <h2>Events</h2>
                 <div class="card">
                     <picture>
-                        <img src="../chamber/images/ypn.jpg" alt="">
+                        <img src="images/ypn.jpg" alt="">
                     </picture>
                     <div class="cardContent">
                         <h2>December 7th, 2023</h2>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="card">
                     <picture>
-                        <img src="../chamber/images/coffee.jpg" alt="">
+                        <img src="images/coffee.jpg" alt="">
                     </picture>
                     <div class="cardContent">
                         <h2>December 19th, 2023</h2>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="card">
                     <picture>
-                        <img src="../chamber/images/powerhour.jpg" alt="">
+                        <img src="images/powerhour.jpg" alt="">
                     </picture>
                     <div class="cardContent">
                         <h2>December 21st, 2023</h2>
@@ -175,7 +175,7 @@
             </div>
         </footer>
     </div>
-    <script src="/chamber/scripts/menu.js"></script>
+    <script src="scripts/menu.js"></script>
 </body>
 
 </html>
