--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,13 +27,13 @@
         <hr>
         <header>
             <a href="index.html">
-                <img class="logo" srcset="images/hero.webp" alt="logo">
+                <img class="logo" srcset="images/logo.webp" alt="logo">
             </a>
         </header>
         <nav id="mainnav">
             <ul>
                 <li class="hamburger" id="menubutton">
-                    <img src="images/hamburger.png" alt="hamburger menu">
+                    <img src="images/hamburgerbutton.png" alt="hamburger menu">
                 </li>
 
                 <li class="menuItem"><a href="index.html">Home</a></li>
@@ -43,7 +43,7 @@
         </nav>
         <main>
             <div class="banner">
-              <img src="images/wdd230-org.webp">
+              <img src="images/hero.webp">
                 <a href="" class=""></a>
             </div>
             <div class="textContent">
