--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" href="images/favicon.ico">
     <meta property="og:title" content="Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://sethro552.github.io/wdd230/chamber/index.html">
+    <meta property="og:image" content="https://sethro552.github.io/wdd230/chamber/images/logo.webp">
     <meta property="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
 </head>
 
