--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,9 +25,7 @@
     <div class="viewport">
         <hr>
         <header>
-            <a href="index.html">
                 <img class="logo" srcset="images/logo.webp" alt="logo">
-            </a>
         </header>
         <main>
           <nav id="mainnav">
@@ -42,7 +40,7 @@
             </ul>
         </nav>
             <div class="banner">
-              <img src="images/hero.webp">
+              <img srcset="images/hero.webp">
                 <a href="" class=""></a>
             </div>
             <div class="textContent">
