--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
             <img src="images/profile.png" alt="">
             <h1>Seth Markle</h1>
             </header>
+            <nav id="mainnav">
+              <ul>
+                  <li class="hamburger" id="menubutton">
+                      <img src="chamber/images/hamburgerbutton.png" alt="hamburger menu">
+                  </li>
+  
+                  <li class="menuItem"><a href="index.html">Home</a></li>
+  
+  
+              </ul>
+          </nav>
             <main>
               <div class="hero2">
                 <picture>
@@ -57,7 +68,7 @@
                 
             </ul>
         </main>
-        <footer class="footer">
+        <footer>
             <p>
                 &copy; Fall Term 2023 | Seth Markle | Ohio | <span>BYUI Online Learning</span>
             </p>
