--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,7 +27,6 @@
         <header>
                 <img class="logo" srcset="images/logo.webp" alt="logo">
         </header>
-        <main>
           <nav id="mainnav">
             <ul>
                 <li class="hamburger" id="menubutton">
@@ -35,10 +34,11 @@
                 </li>
 
                 <li class="menuItem"><a href="index.html">Home</a></li>
-
+                <li class="menuItem"><a href="discover.html">Discover</a></li>
 
             </ul>
         </nav>
+        <main>
             <div class="banner">
               <img srcset="images/hero.webp">
                 <a href="" class=""></a>
