--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Chamber of Commerce webpage for [City Name Here]</title>
+    <title>The Chamber of Commerce webpage for Hudson Ohio</title>
     <meta name="description" content="Seth's WDD 230 chamber of commerce project for BYUI">
     <meta name="author" content="Seth Markle">
     <link rel="stylesheet" href="styles/base.css">
@@ -43,7 +43,7 @@
             <div class="sidebar">
                 <div class="left">
                     <div class="statistics">
-                        <h2>Our Statistics</h2>
+                        <h1>Our Statistics</h1>
                         <p>Population: 22,917</p>
                         <p>Median Age: 43.9 Years</p>
                         <p>Median Household Income: $143,143</p>
@@ -95,6 +95,9 @@
                         <div class="galleryImage">
                             <img src="images/forestwalk.jpg" alt="Wilderness Hike"  loading="lazy">
                             <span class="label">Wilderness Hike</span>
+                        </div>
+                        <div class="galleryImage">
+                            <img src="images/" alt="" loading="lazy">
                         </div>
                     </div>
         </main>
