--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -98,7 +98,7 @@
                             <span class="label">Wilderness Hike</span>
                         </div>
                         <div class="galleryImage">
-                            <img src="images/" alt="" loading="lazy">
+                            <img src="images/beach" alt="" loading="lazy">
                         </div>
                     </div>
         </main>
