--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -22,7 +22,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="/index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                 </ul>
             </nav>
