--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="content="Seth's WDD 230 Design Principles">
-    content="Assignment">
+    <meta name="description" content="content="Seths WDD 230 Design Principles">
+    <meta name="author" content="Seth Markle">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">
