--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -17,6 +17,7 @@
             <h1>Seth Markle</h1>
             <a href="/index.html">Home</a>
         </header>
+        </div>
             <h1>Design Principles</h1>
             <main>
                 <section class="section1">
