--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -18,6 +18,7 @@
         <header>
             <h1>Site Plan</h1>
         </header>
+    </div>
         <main>
             <nav>
                 <ul>
