--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,7 +40,7 @@
         </nav>
         <main>
             <div class="banner">
-              <img class="hero" srcset="images/hero.webp">
+              <img class="hero" srcset="images/hero.webp" alt="banner">
                 <a href="" class=""></a>
             </div>
             <div class="textContent">
