--- a/chamber/index.html
+++ b/chamber/index.html
@@ -97,7 +97,7 @@
                 <div class="card">
                     <div class="cardContent">
                         <h2>Current Weather</h2>
-                        <img src="" alt="icon" id="weather-icon" class="weatherIcon inline">
+                        <img src="image" alt="icon" id="weather-icon" class="weatherIcon inline">
                         <p id="current-temp" class="inline"></p>
                         <p id="caption-desc" class="inline"></p>
                     </div>
