--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -3,14 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="title" content="WDD 230 - Web Frontend Development">
+    <meta name="title" content="DOM Manipulation Activity">
     <meta name="author" content="Seth Markle">
-    <meta name="description" content="WDD 230 - Web Frontend Development - Chamber-Site-Plan">
+    <meta name="description" content="book of mormon chart">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/lesson05/style.css">
     <script defer src="/lesson05/book.js"></script>
-    <title>DOM Manipulation Activity</title>
 </head>
 
 <body>
