--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="title" content="DOM Manipulation Activity">
+    <meta name="title" content="book of mormon top 10">
     <meta name="author" content="Seth Markle">
     <meta name="description" content="book of mormon chart">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
