--- a/chamber/index.html
+++ b/chamber/index.html
@@ -125,7 +125,7 @@
                 <h2>Spotlights</h2>
                 <div class="card">
                     <picture>
-                        <img src="" alt="" id="p1">
+                        <img src="firesafety.jpg" alt="" id="p1">
                     </picture>
                     <div class="cardContent">
                         <h2 id="t1">Spotlight 1</h2>
