--- a/chamber/index.html
+++ b/chamber/index.html
@@ -134,7 +134,7 @@
                 </div>
                 <div class="card">
                     <picture>
-                        <img src="" alt="" id="p2">
+                        <img src="ohiobmv.jpg" alt="" id="p2">
                     </picture>
                     <div class="cardContent">
                         <h2 id="t2">Spotlight 2</h2>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="card">
                     <picture>
-                        <img src="" alt="" id="p3">
+                        <img src="permit.jpg" alt="" id="p3">
                     </picture>
                     <div class="cardContent">
                         <h2 id="t3">Spotlight 3</h2>
