--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,6 +27,7 @@
         <header>
                 <img class="logo" srcset="images/logo.webp" alt="logo">
         </header>
+    </div>
           <nav id="mainnav">
             <ul>
                 <li class="hamburger" id="menubutton">
@@ -35,7 +36,7 @@
 
                 <li class="menuItem"><a href="index.html">Home</a></li>
                 <li class="menuItem"><a href="discover.html">Discover</a></li>
-
+                <li class="menuItem"><a href="join.html">Join</a></li>
             </ul>
         </nav>
         <main>
