--- a/chamber/index.html
+++ b/chamber/index.html
@@ -97,7 +97,7 @@
                 <h2>Spotlights</h2>
                 <div class="card">
                     <picture>
-                        <img src="firesafety.jpg" alt="" id="p1">
+                        <img src="images/firesafety.jpg" alt="fire" id="p1">
                     </picture>
                     <div class="cardContent">
                         <h2 id="t1">Spotlight 1</h2>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="card">
                     <picture>
-                        <img src="ohiobmv.jpg" alt="" id="p2">
+                        <img src="images/ohiobmv.jpg" alt="BMV" id="p2">
                     </picture>
                     <div class="cardContent">
                         <h2 id="t2">Spotlight 2</h2>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="card">
                     <picture>
-                        <img src="permit.jpg" alt="" id="p3">
+                        <img src="images/permit.jpg" alt="Permits" id="p3">
                     </picture>
                     <div class="cardContent">
                         <h2 id="t3">Spotlight 3</h2>
