--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,10 +15,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&amp;display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
-    <meta name="og title" content="Hudson Chamber of Commerce">
-    <meta name="og type" content="website">
-    <meta name="og image" content="https://sethro552.github.io/wdd230/chamber/images/logo.webp">
-    <meta name="og url" content="https://sethro552.github.io/wdd230/chamber/index.html">
+    <meta name="og: title" content="Hudson Chamber of Commerce">
+    <meta name="og: type" content="website">
+    <meta name="og: image" content="https://sethro552.github.io/wdd230/chamber/images/logo.webp">
+    <meta name="og: url" content="https://sethro552.github.io/wdd230/chamber/index.html">
 </head>
 
 <body>
