--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,10 +8,10 @@
     <title>The Chamber of Commerce webpage for [City Name Here]</title>
     <meta name="description" content="Seth's WDD 230 chamber of commerce project for BYUI">
     <meta name="author" content="Seth Markle">
-    <meta name="title" content="Hudson Chamber of Commerce">
-    <meta name="type" content="website">
-    <meta name="image" content="https://sethro552.github.io/wdd230/chamber/images/logo.webp">
-    <meta name="url" content="https://sethro552.github.io/wdd230/chamber/index.html">
+    <meta property="og:title" content="Chamber of Commerce">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://sethro552.github.io/wdd230/chamber/images/logo.webp">
+    <meta property="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/normalize.css">
