--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,8 +8,8 @@
     <title>The Chamber of Commerce webpage for [City Name Here]</title>
     <meta name="description" content="Seth's WDD 230 chamber of commerce project for BYUI">
     <meta name="author" content="Seth Markle">
-    <meta property="og:title" content="Chamber of Commerce">
-    <meta property="og:type" content="website">
+    <meta property="og:title" content="Hudson Chamber of Commerce">
+    <meta property="og:type" content="chamber of commerce">
     <meta property="og:image" content="https://sethro552.github.io/wdd230/chamber/images/logo.webp">
     <meta property="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
     <link rel="stylesheet" href="styles/base.css">
