--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Chamber of Commerce webpage for [City Name Here]</title>
+    <title>The Chamber of Commerce webpage for Hudson</title>
     <meta name="description" content="Seth's WDD 230 chamber of commerce project for BYUI">
     <meta name="author" content="Seth Markle">
     <meta property="og:title" content="Hudson Chamber of Commerce">
