--- a/chamber/index.html
+++ b/chamber/index.html
@@ -37,6 +37,7 @@
                 <li class="menuItem"><a href="index.html">Home</a></li>
                 <li class="menuItem"><a href="discover.html">Discover</a></li>
                 <li class="menuItem"><a href="join.html">Join</a></li>
+                <li class="menuItem"><a href="directory.html">Directory</a></li>
             </ul>
         </nav>
         <main>
