--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,7 +8,7 @@
     <title>The Chamber of Commerce webpage for Hudson</title>
     <meta name="description" content="Seth's WDD 230 chamber of commerce project for BYUI">
     <meta name="author" content="Seth Markle">
-    <meta name="og:title" content="Chamber of Commerce">
+    <meta name="og:title" content="Hudson Chamber of Commerce">
     <meta name="og:type" content="website">
     <meta name="og:image" content="https://sethro552.github.io/wdd230/chamber/images/logo.webp">
     <meta name="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
