--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -36,7 +36,8 @@
 
                 <li class="menuItem"><a href="index.html">Home</a></li>
                 <li class="menuItem"><a href="discover.html">Discover</a></li>
-
+                <li class="menuItem"><a href="join.html">Join</a></li>
+                <li class="menuItem"><a href="directory.html">Directory</a></li>
             </ul>
         </nav>
         <main>
