--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -28,6 +28,7 @@
         <header>
                 <img class="logo" srcset="images/logo.webp" alt="logo">
         </header>
+    </div>
           <nav id="mainnav">
             <ul>
                 <li class="hamburger" id="menubutton">
@@ -100,6 +101,7 @@
                         <div class="galleryImage">
                             <img src="images/beach" alt="" loading="lazy">
                         </div>
+                    </div>
                     </div>
         </main>
             <footer>
