--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -75,6 +75,7 @@
                             <p></p>
                         </a>
                     </div>
+                </div>
                     <p id="time">---</p>
                 <div class="right">
                     <div class="gallery">
