--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -52,6 +52,7 @@
                         <p>Median Household Income: $143,143</p>
                         <p>Median Home Value: $370,900</p>
                     </div>
+                </div>
                     <div class="events">
                         <h2>Upcoming Events</h2>
                         <a href="#">
