--- a/chamber/join.html
+++ b/chamber/join.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Join Page for the Hudson Chamber of Commerce </title>
-    <meta name="description" content="Seth's WDD 230 chamber of commerce project for BYUI">
+    <meta name="description" content="Join page for WDD 230 chamber of commerce project for BYUI">
     <meta name="author" content="Seth Markle">
     <meta property="og:title" content="Chamber of Commerce">
     <meta property="og:type" content="website">
