--- a/chamber/join.html
+++ b/chamber/join.html
@@ -96,7 +96,7 @@
                     </fieldset>
                 </div>
                 <div class="buttonframe">
-                    <input type="submit" value="Join">
+                    <input type="submit" value="Submit">
                 </div>
         </main>
         <footer>
