--- a/chamber/join.html
+++ b/chamber/join.html
@@ -42,7 +42,7 @@
         </nav>
         <main>
             <h1>Join the Chamber</h1>
-            <form method="post" action="thankyou.php">
+            <form method="post" action="images/thankyou.jpg">
                 <!-- action had to be a php file because the form was not working due to NginX not being able to handle the form data. -->
                 <div class="blocks">
                     <fieldset>
