--- a/chamber/join.html
+++ b/chamber/join.html
@@ -43,7 +43,7 @@
         <main>
             <h1>Join the Chamber</h1>
             <form method="post" action="images/thankyou.jpg">
-                <!-- action had to be a php file because the form was not working due to NginX not being able to handle the form data. -->
+            </form>
                 <div class="blocks">
                     <fieldset>
                         <legend>Applicant Information</legend>
