--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -26,7 +26,7 @@
     <div class="viewport">
         <hr>
         <header>
-                <img class="logo" srcset="images/logo.webp" alt="logo">
+                <img src="logo" srcset="images/logo.webp" alt="logo">
         </header>
     </div>
           <nav id="mainnav">
