--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/lazy.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&amp;display=swap" rel="stylesheet">
@@ -25,7 +26,7 @@
     <div class="viewport">
         <hr>
         <header>
-                <img class="logo" srcset="images/logo.webp" alt="logo">
+                <img src="logo" srcset="images/logo.webp" alt="logo">
         </header>
     </div>
           <nav id="mainnav">
