--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Seth Markle">
     <meta name="description" content="home page setup for wdd 230">
     <meta name="title" content="chamber site plan">
+    <title>Chamber Site Plan</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/base.css">
