--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -29,6 +29,7 @@
                 </ul>
             </nav>
             <article>
+                <h2>Hudson Site Plan</h2>
                 <section class="name">
                     <h3>Site Name</h3>
                     <p>This name of this site will be The Hudson Chamber of Commerce.
