--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Seth Markle">
     <meta name="description" content="book of mormon chart">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Book of Mormon</title>
     <link rel="stylesheet" href="/lesson05/style.css">
     <script defer src="/lesson05/book.js"></script>
 </head>
