--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,7 +8,7 @@
     <title>The Chamber of Commerce webpage for Hudson</title>
     <meta name="description" content="Seth's WDD 230 chamber of commerce project for BYUI">
     <meta name="author" content="Seth Markle">
-    <meta property="og:title" content="Chamber of Commerce">
+    <meta property="og:title" content="Hudson Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://sethro552.github.io/wdd230/chamber/images/logo.webp">
     <meta property="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
@@ -26,7 +26,7 @@
     <div class="viewport">
         <hr>
         <header>
-                <img src="logo" srcset="images/logo.webp" alt="logo">
+                <img class="logo" srcset="images/logo.webp" alt="logo">
         </header>
     </div>
           <nav id="mainnav">
