--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -6,7 +6,7 @@
     <meta name="title" content="book of mormon top 10">
     <meta name="author" content="Seth Markle">
     <meta name="description" content="book of mormon chart">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book of Mormon</title>
     <link rel="stylesheet" href="/lesson05/style.css">
     <script defer src="/lesson05/book.js"></script>
