--- a/chamber/index.html
+++ b/chamber/index.html
@@ -43,7 +43,7 @@
         </nav>
         <main>
             <div class="banner">
-              <img src="hero" srcset="images/hero.webp" alt="banner">
+              <img src="images/hero.webp" alt="banner">
             </div>
             <div class="textContent">
                 <h1>Hudson Chamber of Commerce</h1>
