--- a/chamber/join.html
+++ b/chamber/join.html
@@ -66,7 +66,7 @@
                         <label>
                             <input type="radio" name="audience" value="np">
                             <span>NP Membership ( FREE )</span>
-                            <p class="label">For Non-Profit organizations</p>
+                            <p class="for">For Non-Profit organizations</p>
                         </label>
                         <label>
                             <input type="radio" name="audience" value="br" checked>
