--- a/chamber/join.html
+++ b/chamber/join.html
@@ -66,22 +66,22 @@
                         <label>
                             <input type="radio" name="audience" value="np">
                             <span>NP Membership ( FREE )</span>
-                            <p class="for">For Non-Profit organizations</p>
+                            <h5>For Non-Profit organizations</h5>
                         </label>
                         <label>
                             <input type="radio" name="audience" value="br" checked>
                             <span>Bronze Membership ($50/yr)</span>
-                            <p class="label">For Small Businesses</p>
+                            <h5>For Small Businesses</h5>
                         </label>
                         <label>
                             <input type="radio" name="audience" value="si">
                             <span>Silver Membership ($100/yr)</span>
-                            <p class="label">For Medium Businesses</p>
+                            <h5>For Medium Businesses</h5>
                         </label>
                         <label>
                             <input type="radio" name="audience" value="go">
                             <span>Gold Membership ($200/yr)</span>
-                            <p class="label">For Large Businesses</p>
+                            <h5>For Large Businesses</h5>
                         </label>
                     </fieldset>
                     <fieldset class="hiddenForm">
