--- a/chamber/join.html
+++ b/chamber/join.html
@@ -57,7 +57,7 @@
                     <fieldset>
                         <legend>Business Information</legend>
                         <label>Business Name <input type="text" name="businessName"></label>
-                        <label for="business">Business Description</label>
+                        <h4>Business Description</h4>
                         <textarea name="business" placeholder="Business Description"></textarea>
                         <input type="hidden" name="datetime" id="datetime" value="">
                     </fieldset>
