--- a/chamber/join.html
+++ b/chamber/join.html
@@ -57,7 +57,7 @@
                     <fieldset>
                         <legend>Business Information</legend>
                         <label>Business Name <input type="text" name="businessName"></label>
-                        <h4>Business Description</h4>
+                        <label for="business">Business Description</label>
                         <textarea name="business" placeholder="Business Description"></textarea>
                         <input type="hidden" name="datetime" id="datetime" value="">
                     </fieldset>
@@ -66,22 +66,22 @@
                         <label>
                             <input type="radio" name="audience" value="np">
                             <span>NP Membership ( FREE )</span>
-                            <h5>For Non-Profit organizations</h5>
+                            <p class="label">For Non-Profit organizations</p>
                         </label>
                         <label>
                             <input type="radio" name="audience" value="br" checked>
                             <span>Bronze Membership ($50/yr)</span>
-                            <h5>For Small Businesses</h5>
+                            <p class="label">For Small Businesses</p>
                         </label>
                         <label>
                             <input type="radio" name="audience" value="si">
                             <span>Silver Membership ($100/yr)</span>
-                            <h5>For Medium Businesses</h5>
+                            <p class="label">For Medium Businesses</p>
                         </label>
                         <label>
                             <input type="radio" name="audience" value="go">
                             <span>Gold Membership ($200/yr)</span>
-                            <h5>For Large Businesses</h5>
+                            <p class="label">For Large Businesses</p>
                         </label>
                     </fieldset>
                     <fieldset class="hiddenForm">
