--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="WDD 230 - Web Frontend Development">
     <meta name="author" content="Seth Markle">
-    <meta name="description" content="WDD 230 - Web Frontend Development - Chamber-Site-Plan">
+    <meta name="description" content="Seth's WDD 230 chamber of commerce project for BYUI">
+    <meta name="author" content="Seth Markle">
+    <meta property="og:title" content="Hudson Chamber of Commerce" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://sethro552.github.io/wdd230/chamber/images/logo.webp" />
+    <meta property="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
