--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
     <link rel="icon" href="chamber/images/favicon.ico">
-    <link rel="stylesheet" href="styles/normalization.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -23,7 +23,7 @@
 </head>
 <body>    
         <header>
-            <img src="images/profile.png" alt="">
+            <img srcset="images/profile.png" alt="">
             <h1>Seth Markle</h1>
             </header>
             <nav id="mainnav">
