--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Seth's WDD 230 chamber of commerce project for BYUI">
     <meta name="author" content="Seth Markle">
     <meta property="og:title" content="Hudson Chamber of Commerce">
-    <meta property="og:type" content="information">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="https://sethro552.github.io/wdd230/chamber/images/logo.webp">
     <meta property="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
