--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -53,29 +53,6 @@
                         <p>Median Home Value: $370,900</p>
                     </div>
                 </div>
-                    <div class="events">
-                        <h2>Upcoming Events</h2>
-                        <a href="#">
-                            <p class="event">Art Exhibit</p>
-                            <p></p>
-                        </a>
-                        <a href="#">
-                            <p class="event">Nature Walk</p>
-                            <p></p>
-                        </a>
-                        <a href="#">
-                            <p class="event">Old Market</p>
-                            <p></p>
-                        </a>
-                        <a href="#">
-                            <p class="event">Train Station Shopping</p>
-                            <p></p>
-                        </a>
-                        <a href="#">
-                            <p class="event">Wilderness Hike</p>
-                            <p></p>
-                        </a>
-                    </div>
                 </div>
                     <p id="time">---</p>
                 <div class="right">
@@ -101,7 +78,8 @@
                             <span class="label">Wilderness Hike</span>
                         </div>
                         <div class="galleryImage">
-                            <img src="images/beach" alt="" loading="lazy">
+                            <img src="images/beach.jpg" alt="Hudson Springs Lake" loading="lazy">
+                            <span class="label">Hudson Springs Lake</span>
                         </div>
                     </div>
                     </div>
