--- a/chamber/index.html
+++ b/chamber/index.html
@@ -48,14 +48,14 @@
             <div class="textContent">
                 <h1>Hudson Chamber of Commerce</h1>
                 <p>We're devoted to supporting and promoting the original business community.
-                   Our thing is to help businesses network, grow, and thrive.
+                   Our goal is to help businesses network, grow, and thrive.
                 <br><br>
-                  Through our events, coffers, and advocacy, we aim to foster a strong and vibrant original small town feel.
-                  Whether you're a small business proprietor, a large corperation, or just someone looking to support your 
+                  Through our events, activites, and advocacy, we aim to foster a strong and vibrant original small town feel.
+                  Whether you're a small business proprietor, a large corperation, or just someone looking to support our 
                   community, we want you to join us. 
                 <br><br>
-                  Come a member moment and start enjoying the numerous benefits of Chamber class, including access to 
-                  networking events, abatements on business services, and the occasion to have your voice heard on 
+                  Become a member and start enjoying the numerous benefits of the Chamber. This includes access to 
+                  networking events, business services, and the occasion to have your voice heard on 
                   important issues affecting the business community.
                 </p>
             </div>
@@ -102,7 +102,7 @@
                         <img src="images/firesafety.jpg" alt="fire" id="p1">
                     </picture>
                     <div class="cardContent">
-                        <h2 id="t1">Spotlight 1</h2>
+                        <h2 id="t1">Are you prepared?</h2>
                         <p id="d1"></p>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                         <img src="images/ohiobmv.jpg" alt="BMV" id="p2">
                     </picture>
                     <div class="cardContent">
-                        <h2 id="t2">Spotlight 2</h2>
+                        <h2 id="t2">Welcome to the Ohio BMV</h2>
                         <p id="d2"></p>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                         <img src="images/permit.jpg" alt="Permits" id="p3">
                     </picture>
                     <div class="cardContent">
-                        <h2 id="t3">Spotlight 3</h2>
+                        <h2 id="t3">Apply for a permit</h2>
                         <p id="d3"></p>
                     </div>
                 </div>
