--- a/chamber/join.html
+++ b/chamber/join.html
@@ -120,6 +120,7 @@
                 <span id="moddate">Date Modified</span>
             </div>
         </footer>
+        <p id="time">---</p>
   <script src="scripts/menu.js"></script>
 </body>
 
