--- a/chamber/index.html
+++ b/chamber/index.html
@@ -146,6 +146,7 @@
                   <span id="moddate">Date Modified</span>
               </div>
           </footer>
+          <p id="time">---</p>
     <script src="scripts/menu.js"></script>
 </body>
 
