--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -67,6 +67,7 @@
         <span id="moddate">Date Modified</span>
     </div>
 </footer>
+<p id="time">---</p>
 <script src="scripts/menu.js"></script>
 </body>
 
