--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,7 +34,6 @@
                 <li class="hamburger" id="menubutton">
                     <img src="images/hamburgerbutton.png" alt="hamburger menu">
                 </li>
-
                 <li class="menuItem"><a href="index.html">Home</a></li>
                 <li class="menuItem"><a href="discover.html">Discover</a></li>
                 <li class="menuItem"><a href="join.html">Join</a></li>
@@ -47,16 +46,19 @@
             </div>
             <div class="textContent">
                 <h1>Hudson Chamber of Commerce</h1>
-                <p>We're devoted to supporting and promoting the original business community.
-                   Our goal is to help businesses network, grow, and thrive.
+                <br>
+                <h3>We're devoted to supporting and promoting the original business community.
+                    Our goal is to help businesses network, grow, and thrive.</h3>
                 <br><br>
-                  Through our events, activites, and advocacy, we aim to foster a strong and vibrant original small town feel.
-                  Whether you're a small business proprietor, a large corperation, or just someone looking to support our 
-                  community, we want you to join us. 
+                <h3>Through our events, activites, and advocacy, we aim to foster a strong and vibrant original small town feel.
+                  Whether you're a small business proprietor, a large corperation,
+                  <br>
+                  or just someone looking to support our 
+                  community, we want you to join us.</h3> 
                 <br><br>
-                  Become a member and start enjoying the numerous benefits of the Chamber. This includes access to 
+                <h3>Become a member and start enjoying the numerous benefits of the Chamber. This includes access to 
                   networking events, business services, and the occasion to have your voice heard on 
-                  important issues affecting the business community.
+                  important issues affecting the business community.</h3>
                 </p>
             </div>
             <div class="cards">
