--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>    
         <header>
-            <img srcset="images/profile.png" alt="">
+            <img src="images/profile.png" alt="">
             <h1>Seth Markle</h1>
             </header>
             <nav id="mainnav">
