--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -13,18 +13,13 @@
 </head>
 
 <body>
-    <h1>📘 Book of Mormon - Top 10</h1>
+    <h1>📖 Book of Mormon - Top 10</h1>
     <main>
-        <div class="input">
-            <label>Enter Book and Chapter<br>
-                <input type="text" id="favchap" placeholder="Alma 5" required></label>
-            <button type="submit">Add Chapter</button>
-        </div>
-        <div class="listcontainer">
-            <ul class="list">
-            </ul>
-        </div>
+        <label for="favchap">Enter Book and Chapter: </label>
+        <input type="text" id="favchap" placeholder="Alma 5">
+        <button type="submit">Add Chapter</button>
+        <ul id="list"></ul>
     </main>
+    <script src="scripts/book.js"></script>
 </body>
-
 </html>
