--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,7 +27,6 @@
         <hr>
         <header>
                 <img src="images/logo.webp" alt="logo">
-        </header>
     </div>
           <nav id="mainnav">
             <ul>
@@ -40,6 +39,7 @@
                 <li class="menuItem"><a href="directory.html">Directory</a></li>
             </ul>
         </nav>
+    </header>
         <main>
             <div class="banner">
               <img src="images/hero.webp" alt="banner">
@@ -148,7 +148,9 @@
               </div>
           </footer>
           <p id="time">---</p>
-    <script src="scripts/menu.js"></script>
+    <script src="scripts/currentdate.js"></script>
+    <script src="scripts/darklight.js"></script>
+    <script src="scripts/lazyscripts.js"></script>
 </body>
 
 </html>
