--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
               </ul>
           </nav>
             <main>
-              <div class="hero2">
+              <div class="hero">
                 <picture>
-                  <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/columbus-ohio/400x250/columbus-temple-lds-408057-wallpaper.jpg" alt="Columbus Temple - 2022">
+                  <img srcset="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/columbus-ohio/400x250/columbus-temple-lds-408057-wallpaper.jpg" alt="Columbus Temple - 2022">
                 </picture>
                 <div class="herotemple">
                   <p>Columbus Temple</p>
