--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
               </ul>
           </nav>
             <main>
-              <div class="hero">
+              <div class="hero2">
                 <picture>
-                  <img srcset="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/columbus-ohio/400x250/columbus-temple-lds-408057-wallpaper.jpg" alt="Columbus Temple - 2022">
+                  <img src="images/hero2.webp" alt="Columbus Temple - 2022">
                 </picture>
-                <div class="herotemple">
+                <div class="hero2label">
                   <p>Columbus Temple</p>
                 </div>
               </div>
