--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <main>
               <div class="hero2">
                 <picture>
-                  <img src="images/hero2.webp" alt="Columbus Temple - 2022">
+                  <img srcset="images/hero2.webp" alt="Columbus Temple - 2022">
                 </picture>
                 <div class="hero2label">
                   <p>Columbus Temple</p>
