--- a/form.html
+++ b/form.html
@@ -12,25 +12,15 @@
     <link rel="icon" href="chamber/images/favicon.ico">
     <link rel="stylesheet" href="styles/form.css">
     <link rel="stylesheet" href="styles/normalization.css">
-    <link rel="stylesheet" href="styles/larger.css">
-    <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/base.css">
     <title>Seth Markle - WDD 230 - Web Frontend Development</title>
 </head>
 <body>    
         <header>
-            <img src="images/profile.png" alt="">
-            <h1>Seth Markle</h1>
+            <h1>Form Build</h1>
             </header>
             <nav id="mainnav">
               <ul>
-                  <li class="hamburger" id="menubutton">
-                      <img src="chamber/images/hamburgerbutton.png" alt="hamburger menu">
-                  </li>
-  
                   <li class="menuItem"><a href="index.html">Home</a></li>
-  
-  
               </ul>
           </nav>
             <main>
