--- a/form.html
+++ b/form.html
@@ -29,9 +29,9 @@
                         <legend>User Information</legend>
                         <label class="top">Username*<input type="text" name="Username" required></label>
                         <label class="top">Password*<input type="password" name="password" required pattern="[a-zA-Z0-9]{8,}">
-                        <label class="top">Repeat Password*<input type="retype" name="retype" required></label>       
+                        <label class="top">Password*<input type="retype" name="retype" required></label>       
                         <label class="top">Email*<input type="email" name="email" required></label>
-                        <label class="top">Page Rating*<input type="rating" name="rating" required></label>
+                        <label class="top">Rating*<input type="rating" name="rating" required></label>
                     </fieldset>
             </main>
             <footer>
