--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                   <a href="chamber/index.html">Chamber Home Page Build</a>
                 <br>
                   <a href="lesson05/bom.html">DOM Manipulation</a>
+                <br>
+                  <a href="form.html">Form Build</a>
                 </div>
             </section>
             <section>
