--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Form Build">
-    <meta name="author" content="Seth Markle">
+    <meta name="author" content="Seth Markle"/>
     <meta name="description" content="WDD 230 - Web Frontend Development - Form Build">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,9 +29,11 @@
                         <legend>User Information</legend>
                         <label class="top">Username*<input type="text" name="Username" required></label>
                         <label class="top">Password*<input type="password" name="password" required pattern="[a-zA-Z0-9]{8,}">
-                        <label class="top">Password*<input type="retype" name="retype" required></label>       
-                        <label class="top">Email*<input type="email" name="email" required></label>
-                        <label class="top">Rating*<input type="rating" name="rating" required></label>
+                        <label class="top">ReEnter Password*<input type="retype" name="retype" required></label>       
+                        <label class="top">Please Enter A Valid Email Address*<input type="email" name="email" required></label>
+                        <br>
+                        <label class="top">Page Rating*<input type="rating" name="rating" required></label>
+                        <label class="top">
                     </fieldset>
             </main>
             <footer>
