--- a/form.html
+++ b/form.html
@@ -27,13 +27,12 @@
                     <form method="get" action="record.html"></form>
                     <fieldset>
                         <legend>User Information</legend>
-                        <label class="top">Username*<input type="text" name="Username" required></label>
+                        <label class="top">Username*<input type="text" name="Username"></label>
                         <label class="top">Password*<input type="password" name="password" required pattern="[a-zA-Z0-9]{8,}">
-                        <label class="top">ReEnter Password*<input type="retype" name="retype" required></label>       
-                        <label class="top">Please Enter A Valid Email Address*<input type="email" name="email" required></label>
+                        <label class="top">ReEnter Password*<input type="password" name="retype"></label>       
+                        <label class="top">Please Enter A Valid Email Address*<input type="email" name="email"></label>
                         <br>
                         <label class="top">Page Rating*<input type="rating" name="rating" required></label>
-                        <label class="top">
                     </fieldset>
             </main>
             <footer>
