--- a/form.html
+++ b/form.html
@@ -32,7 +32,7 @@
                         <label class="top">ReEnter Password*<input type="password"></label>       
                         <label class="top">Please Enter A Valid Email Address*<input type="email"></label>
                         <br>
-                        <label class="top">Page Rating*<input type="rating"></label>
+                        <label class="top">Page Rating*<input type="range"></label>
                     </fieldset>
             </main>
             <footer>
