--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="chamber/images/favicon.ico">
     <link rel="stylesheet" href="styles/form.css">
     <link rel="stylesheet" href="styles/normalization.css">
-    <title>Seth Markle - WDD 230 - Web Frontend Development</title>
+    <title>Form Build</title>
 </head>
 <body>    
         <header>
