--- a/form.html
+++ b/form.html
@@ -33,7 +33,11 @@
                         <label class="top">Please Enter A Valid Email Address*<input type="email"></label>
                         <br>
                         <label class="top">Page Rating*<input type="range"></label>
+                        <label class="top"></label>
                     </fieldset>
+                    <div class="buttonframe">
+                        <input type="submit" value="Next">
+                    </div>
             </main>
             <footer>
                 <p>
